# simd

./: CMakeLists.txt  README.md
simd/: add.hpp  float16.hpp  float4.hpp  float8.hpp  intrinsics.hpp  runtime.hpp
tests/: CMakeLists.txt  add.cpp
